# email-worker

./: .env  .gitignore  Cargo.toml  README.md
src/: config.rs  logger.rs  mailer.rs  main.rs  queue_processor.rs
