[package]
name = "email-worker"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging
log = "0.4.11"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.13"

# AMQP Client
lapin = "1.2.1"
tokio-amqp = "0.1.3"

# Email Client
lettre = "0.9.3"
lettre_email = "0.9.4"

# Misc
tokio = { version = "0.2.22", features = ["macros", "io-util"] }

[target.'cfg(debug_assertions)'.dependencies]

# .env support for debug environments
dotenv = "0.15.0"